--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Montserrat:wght@500&display=swap');
+
 .App {
   text-align: center;
 }
@@ -37,6 +39,11 @@
   }
 }
 
+.router {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
 main {
   display: flex;
@@ -50,10 +57,23 @@ header {
   align-items: center;
   background-color: #383434;
   height: 100px;
+  /* font-family: 'Montserrat', sans-serif; */
+  /* font-family: 'Alkatra', cursive; */
+}
+
+footer {
+  background-color: #383434;
+  min-height: 200px;
+  width: 100%;
+  margin-top: auto;
 }
 
 .siteName {
   color: red;
   font-size: 50px;
   padding-left: 70px;
+}
+
+button:hover {
+  cursor: pointer;
 }
