--- a/src/components/user/profile.css
+++ b/src/components/user/profile.css
@@ -21,7 +21,8 @@
   display: flex;
   flex-direction: column;
   border: solid 1px;
-  min-width: 420px;
+  width: 465px;
+  min-height: 185px;
   margin: 10px
 }
 
@@ -70,5 +71,9 @@ h3 {
 }
 
 .docDetail {
+  font-weight: bold;
+}
+
+.docDetailDiv {
   margin: 3px;
 }
